layer0/apps/grocy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grocy
  namespace: grocy
spec:
  selector:
    app: grocy
  ports:
    - name: http
      port: 80
      targetPort: http
