layer0/apps/grocy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grocy
  namespace: grocy
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: cilium
  tls:
    - hosts:
        - food.valley.no
      secretName: food-valley-no-tls
  rules:
    - host: food.valley.no
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grocy
                port:
                  number: 80
